--- a/frontend/src/features/dashboard/components/LevelCard.css
+++ b/frontend/src/features/dashboard/components/LevelCard.css
@@ -27,8 +27,8 @@
     z-index: 1;
     display: block;
     width: 100%;
-    max-width: 400px;
-    margin: 0 auto;
+    max-width: 450px;
+    margin: 0 auto 1.5rem auto;
     font-family: inherit;
     line-height: inherit;
     color: white !important;
@@ -126,7 +126,7 @@
   .level-info-right {
     text-align: center;
     flex-shrink: 0;
-    margin-left: 0.5rem;
+    margin-left: 0.25rem;
   }
   
   .level-number {
